# pn5190_nfcreader

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
src/: HkeyBsp.c  NfcrdlibEx1_DiscoveryLoop.c  phApp_Init.c
src/NxpNfcRdLib/: CMakeLists.txt
src/NxpNfcRdLib/comps/: CMakeLists.txt
src/NxpNfcRdLib/comps/phNfcLib/: CMakeLists.txt
src/NxpNfcRdLib/comps/phacDiscLoop/src/Sw/: phacDiscLoop_Sw.c
src/NxpNfcRdLib/comps/phhalHw/src/: phhalHw.c
src/NxpNfcRdLib/comps/phhalHw/src/Pn5190/: phhalHw_Pn5190.c  phhalHw_Pn5190_Int.c
src/NxpNfcRdLib/types/: ph_NxpBuild_Platform.h
src/Platform/: BoardSelection.h  Board_nRF52840_PNEV5190B.h  phDriver.h  phDriver_Gpio.h  phDriver_Timer.h  phDriver_nRF52840.c  phbalReg.h  phbalReg_nRF52840Spi.c
src/RTOS/: phOsal.h  phOsal_NullOs.c
src/inc_example/: HKeyBsp.h  NfcrdlibEx1_DiscoveryLoop.h  phApp_Init.h  ph_NxpBuild_App.h
